Worked on functionNode class (added the combat function it must be tested)

--- a/Destinul_Cavalerilor_Pierduti/Destinul_Cavalerilor_Pierduti.vcxproj
+++ b/Destinul_Cavalerilor_Pierduti/Destinul_Cavalerilor_Pierduti.vcxproj
@@ -128,12 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="caracter.cpp" />
+    <ClCompile Include="functionNode.cpp" />
     <ClCompile Include="loadStory.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="storyNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="caracter.h" />
+    <ClInclude Include="functionNode.h" />
     <ClInclude Include="loadStory.h" />
     <ClInclude Include="storyNode.h" />
   </ItemGroup>
