--- a/Destinul_Cavalerilor_Pierduti/Destinul_Cavalerilor_Pierduti.vcxproj
+++ b/Destinul_Cavalerilor_Pierduti/Destinul_Cavalerilor_Pierduti.vcxproj
@@ -128,16 +128,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="caracter.cpp" />
-    <ClCompile Include="functionNode.cpp" />
     <ClCompile Include="loadStory.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="storyNode.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="caracter.h" />
-    <ClInclude Include="functionNode.h" />
     <ClInclude Include="loadStory.h" />
-    <ClInclude Include="storyNode.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
